--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,10 @@
               <a href="http://subscribeonandroid.com/{{ site.github.url | remove: "https://" | remove: "http://" }}/feed.xml" target="_blank">Androidで購読</a>
             </li>
             <li>
+              <a href="https://open.spotify.com/show/5TZN2KNlkVx56tJAd8HacN?si=s_xRlN9BRtSkE6NE9GS4-w" target="_blank">Spotifyで購読</a>
+            </li>
+          </ul>
+            <li>
               <a href="{{ site.github.url }}/feed.xml" target="_blank">RSSで購読</a>
             </li>
           </ul>
