add google podcastlink

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
               </li>
             {% endif %}
             <li>
-              <a href="http://subscribeonandroid.com/{{ site.github.url | remove: "https://" | remove: "http://" }}/feed.xml" target="_blank">Androidで購読</a>
+              <a href="https://podcasts.google.com/feed/aHR0cHM6Ly93d3ctZGUtdHN1a2FtYWV0ZS5naXRodWIuaW8vZmVlZC54bWw" target="_blank">Google Podcastで購読</a>
             </li>
             <li>
               <a href="https://open.spotify.com/show/5TZN2KNlkVx56tJAd8HacN?si=s_xRlN9BRtSkE6NE9GS4-w" target="_blank">Spotifyで購読</a>
